syntax = "proto3";

package services.cache;

import "services.proto";

service CacheService {
  rpc query (Query) returns (QueryResult) {}

  rpc getStatus (Empty) returns (Status) {}
}

message Query {
  string method = 1;
  string message = 2;
}

message QueryResult {
  string message = 1;
}